--- a/ScheduleEditorModule/Views/ScheduleEditorHeaderView.xaml
+++ b/ScheduleEditorModule/Views/ScheduleEditorHeaderView.xaml
@@ -1,4 +1,4 @@
-﻿<fluent:RibbonTabItem x:Class="ScheduleEditorModule.Views.HeaderView"
+﻿<fluent:RibbonTabItem x:Class="ScheduleEditorModule.Views.ScheduleEditorHeaderView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +9,7 @@
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
-                      d:DataContext="{d:DesignInstance viewModels:HeaderViewModel}">
+                      d:DataContext="{d:DesignInstance viewModels:ScheduleEditorHeaderViewModel}">
     <fluent:RibbonTabItem.Header>
         <TextBlock Text="Редактор расписания"
                    Style="{x:Null}" />
@@ -19,34 +19,34 @@
                        LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousWeek48x48.png"
                        ToolTip="Предыдущая неделя"
                        Header="&lt;&lt;"
-                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       Command="{Binding ScheduleEditorContentViewModel.ChangeDateCommand, Mode=OneTime}"
                        CommandParameter="{markupExtensions:Int32 -7}">
         </fluent:Button>
         <StackPanel Orientation="Vertical">
             <DatePicker VerticalAlignment="Center"
-                        SelectedDate="{Binding ContentViewModel.SelectedDate, UpdateSourceTrigger=PropertyChanged}" />
+                        SelectedDate="{Binding ScheduleEditorContentViewModel.SelectedDate, UpdateSourceTrigger=PropertyChanged}" />
             <fluent:Button Size="Middle"
                            Icon="pack://application:,,,/ScheduleModule;Component/Resources/Images/Today48x48.png"
                            Header="Текущая неделя"
                            HorizontalAlignment="Center"
-                           Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                           Command="{Binding ScheduleEditorContentViewModel.ChangeDateCommand, Mode=OneTime}"
                            CommandParameter="{x:Null}" />
         </StackPanel>
         <fluent:Button Size="Large"
                        LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/NextWeek48x48.png"
                        ToolTip="Следующая неделя"
                        Header="&gt;&gt;"
-                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       Command="{Binding ScheduleEditorContentViewModel.ChangeDateCommand, Mode=OneTime}"
                        CommandParameter="{markupExtensions:Int32 7}" />
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Изменения">
         <fluent:Button Header="Сохранить"
                        SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/SaveChanges-48x48.png"
-                       Command="{Binding ContentViewModel.SaveChangesCommand}"/>
+                       Command="{Binding ScheduleEditorContentViewModel.SaveChangesCommand}"/>
         <fluent:Button Header="Отменить"
                        SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Cancel-48x48.png" 
-                       Command="{Binding ContentViewModel.CancelChangesCommand}"/>
+                       Command="{Binding ScheduleEditorContentViewModel.CancelChangesCommand}"/>
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
