--- a/ScheduleEditorModule/Views/ScheduleEditorContentView.xaml
+++ b/ScheduleEditorModule/Views/ScheduleEditorContentView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ScheduleEditorModule.Views.ContentView"
+﻿<UserControl x:Class="ScheduleEditorModule.Views.ScheduleEditorContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +9,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:ContentViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:ScheduleEditorContentViewModel}">
     <UserControl.Resources>
         <DataTemplate DataType="{x:Type viewModels:DayOfWeekViewModel}">
             <TextBlock TextAlignment="Right"
