--- a/ScheduleModule/Views/ScheduleContentView.xaml
+++ b/ScheduleModule/Views/ScheduleContentView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ScheduleModule.Views.ContentView"
+﻿<UserControl x:Class="ScheduleModule.Views.ScheduleContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,7 +12,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:ContentViewModel }">
+             d:DataContext="{d:DesignInstance viewModels:ScheduleContentViewModel }">
     <UserControl.Resources>
         <ControlTemplate x:Key="ListBoxItem"
                          TargetType="{x:Type ListBoxItem}">
