--- a/PatientInfoModule/Views/Contracts/ContractsHeaderView.xaml
+++ b/PatientInfoModule/Views/Contracts/ContractsHeaderView.xaml
@@ -10,7 +10,7 @@
                       d:DesignWidth="300"
                       d:DataContext="{d:DesignInstance viewModels:InfoHeaderViewModel}">
     <fluent:RibbonTabItem.Header>
-        <TextBlock Text="Договора"
+        <TextBlock Text="Договоры"
                    Style="{x:Null}" />
     </fluent:RibbonTabItem.Header>
 
